# OpenCVWithCPP

./: README.md
1.HelloOpencv/: CMakeLists.txt  main.cpp
2.VideoCapture/: CMakeLists.txt  main.cpp
3.ChangeBrightness/: CMakeLists.txt  main.cpp
4.ChangeContrast/: CMakeLists.txt  main.cpp
5.HistogramEqualization/: CMakeLists.txt  main.cpp
BaseTensorRT/3.3-onnx-editor/: create-onnx.py  demo.change.onnx  edit-onnx.py  my.onnx  read-onnx.py  torch-gen-onnx.py
BaseTensorRT/3.3-onnx-editor/pbout/: onnx-ml.pb.cc  onnx-ml.pb.h  onnx_ml_pb2.py
Learning/5.AbstractData/Inc/: Int.h  TIntStack.h
Learning/5.AbstractData/Src/: Int.cpp
Learning/6.ClassInterface/Inc/: TPerson.h
Learning/6.ClassInterface/Src/: TPerson.cpp
Learning/9.SalesData/Inc/: SalesData.h
Learning/9.SalesData/Src/: SalesData.cpp
OpenCV/9.CmakeDemo/: main.cpp
OpenCV/9.CmakeDemo/utils/: computeTime.cpp  computeTime.h  logger.cpp  logger.h  plotting.cpp  plotting.h
Qt/1.Tamplate/Inc/: test.h
Qt/1.Tamplate/Src/: test.cpp
Qt/1.Tamplate/UI/: test.ui
Qt/QTGuiDemo/Resource/Inc/: test.h
Qt/QTGuiDemo/Resource/Src/: test.cpp
Qt/Tamplate/Forms/: mainwindows.ui
Qt/Tamplate/Inc/: mainwindows.h
Qt/Tamplate/Src/: mainwindows.cpp
Qt/Tempalte/: CMakeLists.txt
Qt/Template/: cul.cpp  cul.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
Qt/Template/Resource/Inc/: widget.h
Qt/Template/Resource/Src/: widget.cpp
Qt/Template/Resource/UI/: widget.ui
Qt/Template/SDK/myOpenCVLib/: imgshow.cpp
Qt/test/: button.cpp  button.h  button.ui  test.cpp  test.h  test.ui
Qt/untitled/UI/Inc/: test.h
(+2 files in other folders)
